[project]
name = "beta-dataset"
version = "0.1.0"
description = "BETA dataset preprocessing and training with GPU acceleration"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "cupy-cuda12x>=12.0.0",
    "tensorflow>=2.10.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["preprocess.py", "train_ud.py", "train_ui.py"]
